--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -41,6 +41,13 @@
     font-weight: 400;
 }
 
+h3 {
+    color: #19202D;
+    font-family: Kumbh Sans;
+    font-size: 20px;
+    font-weight: 700;
+}
+
 .company {
     margin-top: 10px;
     color: #638098;
